--- a/src/html/vrproduct.html
+++ b/src/html/vrproduct.html
@@ -7,7 +7,7 @@
     <title>VR产品</title>
 
     <body oncontextmenu = "return false" >
-        <div class="document">
+        <div class="document" style="width:1000px">
             <div class="content">
                 <p class="title"></p>
                 <div class="detail">
