--- a/src/html/vrModel.html
+++ b/src/html/vrModel.html
@@ -6,85 +6,85 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>VR模型</title>
 
-    <body oncontextmenu = "return false" >
-        <div class="document">
-            <div class="content">
-                <div class="detail">
-                    <div class="model-box">
-                        <img class="home-img" src="" alt="">
+<body oncontextmenu="return false">
+    <div class="document" style="width:1000px">
+        <div class="content">
+            <div class="detail">
+                <div class="model-box">
+                    <img class="home-img" src="" alt="">
+                </div>
+                <div class="model-detail">
+                    <p class="title"></p>
+                    <div class="contact-way">
+                        <ul class="list-unstyled list-inline">
+                            <li>
+                                <div>
+                                    <span>价格：</span>
+                                    <span class="price price-num">1000</span>
+                                    <span class="price">维币</span>
+                                </div>
+                                <div>
+                                    <span>累计下载量：</span>
+                                    <span class="downamount" style="color: red"></span>
+                                </div>
+                                <div>
+                                    <span>文件大小：</span>
+                                    <span class="softsize"></span>
+                                    <span>KB</span>
+                                </div>
+                                <div>
+                                    <span><img class="add-collection" src="./../asset/vrModel/u502.png" alt=""> 收藏模型：</span>
+                                    <span class="collection"></span>
+                                    <span>人气</span>
+                                </div>
+                            </li>
+                            <li>
+                                <div>
+                                    <span>账户余额不足？</span>
+                                    <span>$</span>
+                                    <a>维币充值</a>
+                                </div>
+                                <div>
+                                    <span>发布时间：</span>
+                                    <span class="date"></span>
+                                </div>
+                                <div>
+                                    <span>浏览次数：</span>
+                                    <span class="lookcount"></span>
+                                    <span>人气</span>
+                                </div>
+                                <div>
+                                    <span><img class="add-praise" src="./../asset/vrModel/u513.png" alt=""> 点赞：</span>
+                                    <span class="praise"></span>
+                                    <span>人气</span>
+                                </div>
+                            </li>
+                        </ul>
                     </div>
-                    <div class="model-detail">
-                        <p class="title"></p>
-                        <div class="contact-way">
-                            <ul class="list-unstyled list-inline">
-                                <li>
-                                    <div>
-                                        <span>价格：</span>
-                                        <span class="price price-num">1000</span>
-                                        <span class="price">维币</span>
-                                    </div>
-                                    <div>
-                                        <span>累计下载量：</span>
-                                        <span class="downamount" style="color: red"></span>
-                                    </div>
-                                    <div>
-                                        <span>文件大小：</span>
-                                        <span class="softsize"></span>
-                                        <span>KB</span>
-                                    </div>
-                                    <div>
-                                        <span><img class="add-collection" src="./../asset/vrModel/u502.png" alt=""> 收藏模型：</span>
-                                        <span class="collection"></span>
-                                        <span>人气</span>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div>
-                                        <span>账户余额不足？</span>
-                                        <span>$</span>
-                                        <a>维币充值</a>
-                                    </div>
-                                    <div>
-                                        <span>发布时间：</span>
-                                        <span class="date"></span>
-                                    </div>
-                                    <div>
-                                        <span>浏览次数：</span>
-                                        <span class="lookcount"></span>
-                                        <span>人气</span>
-                                    </div>
-                                    <div>
-                                        <span><img class="add-praise" src="./../asset/vrModel/u513.png" alt=""> 点赞：</span>
-                                        <span class="praise"></span>
-                                        <span>人气</span>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="text-center">
-                            <button class="btn download-btn">
-                                <img src="./../asset/vrModel/u492.png" alt="">
-                                <span>下载模型</span>
-                            </button>
-                        </div>
-                    </div>
-                    <div class="text-detail">
-                        <div class="header">
-                            VR模型简介
-                        </div>
-                        <p class="text-intro"></p>
-                    </div>
-                    <div class="img-detail">
-                        <div class="header">
-                            模型真实截图
-                        </div>
-                        <div class="img-box">
-                        </div>
+                    <div class="text-center">
+                        <button class="btn download-btn">
+                            <img src="./../asset/vrModel/u492.png" alt="">
+                            <span>下载模型</span>
+                        </button>
                     </div>
                 </div>
-
+                <div class="text-detail">
+                    <div class="header">
+                        VR模型简介
+                    </div>
+                    <p class="text-intro"></p>
+                </div>
+                <div class="img-detail">
+                    <div class="header">
+                        模型真实截图
+                    </div>
+                    <div class="img-box">
+                    </div>
+                </div>
             </div>
+
         </div>
-    </body>
+    </div>
+</body>
 
 </html>
