--- a/src/html/softManagement.html
+++ b/src/html/softManagement.html
@@ -68,10 +68,12 @@
                             </td>
                             <td>ID号</td>
                             <td>名称</td>
-                            <td>类型</td>
-                            <td>开发者</td>
-                            <td>价格</td>
+                            <td>图片</td>
                             <td>发布时间</td>
+                            <td>状态</td>
+                            <td>类型</td>
+                            <td>开发者姓名</td>
+                            <td>开发者真实姓名</td>
                             <td>查看明细</td>
                         </tr>
                     </thead>
