--- a/src/html/agreementDescription.html
+++ b/src/html/agreementDescription.html
@@ -6,7 +6,7 @@
   </head>
   <body oncontextmenu = "return false" >
     <h3 style="text-align: center">维工坊网络服务使用协议</h3>
-    <div class="text text-left">
+    <div class="text text-left content">
         <h4>1.提示条款</h4>
         <p>欢迎您与维工坊共同签署本《用户服务协议》（下称“本协议”）并使用维工坊网站服务！各条款标题仅为帮助您理解该条款表达的主旨之用，不影响或限制本协议条款的含义或解释。为维护您自身权益，建议您仔细阅读各条款具体表述。</p>
         <p>您在申请注册流程中点击同意本协议之前，应当认真阅读本协议。请您务必审慎阅读、充分理解各条款内容，特别是免除或者限制责任的条款、法律适用和争议解决条款。免除或者限制责任的条款将以粗体下划线标识，您应重点阅读。如您对协议有任何疑问，可向维工坊客服咨询。</p>
