--- a/src/html/classifylist.html
+++ b/src/html/classifylist.html
@@ -12,16 +12,16 @@
         <div class="content">
             <div class="header">
                 <p>
-                    <span>VR类型：</span>
+                    <span class="vr-titleName">VR类型：</span>
                     <span class="vr-name">VR教育</span>
                 </p>
                 <p class="list-type">
                     <span class="active" value="100">综合排序</span>
                     <span value="200">最近更新</span>
                     <span value="300">查看人数最多</span>
-                    <span value="400">下载量最多</span>
-                    <span value="500">销量最多</span>
-                    <span value="600">价格</span>
+                    <span class="vr-product" value="300">下载量最多</span>
+                    <span class="vr-model" value="500">销量最多</span>
+                    <span class="vr-model" value="600">价格</span>
                 </p>
             </div>
             <div class="row vr-list">
