--- a/src/html/memberCenter.html
+++ b/src/html/memberCenter.html
@@ -8,7 +8,7 @@
 </head>
 
 <body oncontextmenu = "return false" >
-    <div class="document document-member" style="width: 1612px;">
+    <div class="document document-member" style="width: 1350px;">
         <div class="member-box">
             <div class="member-header">
                 <div class="logo">
@@ -24,38 +24,38 @@
             </div>
             <div class="content">
                 <div class="nav">
-                    <ul class="list-unstyled">
+                    <ul class="list-unstyled nav-a">
                         <li>
                             <img src="./../asset/memberCenter/nav1.png" alt="">
-                            <a href="./memberCenterList.html?iframeType=0" target="listIframe">我的收藏夹</a>
+                            <a class="nav-href" href="./memberCenterList.html?iframeType=0" target="listIframe">我的收藏夹</a>
                         </li>
                         <li>
                             <img src="./../asset/memberCenter/nav2.png" alt="">
-                            <a href="./memberCenterList.html?iframeType=1" target="listIframe">我的浏览足迹</a>
+                            <a class="nav-href" href="./memberCenterList.html?iframeType=1" target="listIframe">我的浏览足迹</a>
                         </li>
                         <li>
                             <img src="./../asset/memberCenter/nav3.png" alt="">
-                            <a href="./memberCenterList.html?iframeType=2" target="listIframe">我的点赞</a>
+                            <a class="nav-href" href="./memberCenterList.html?iframeType=2" target="listIframe">我的点赞</a>
                         </li>
                         <li>
                             <img src="./../asset/memberCenter/nav4.png" alt="">
-                            <a href="./memberCenterList.html?iframeType=3" target="listIframe">我购买的VR模型</a>
+                            <a class="nav-href" href="./memberCenterList.html?iframeType=3" target="listIframe">我购买的VR模型</a>
                         </li>
                         <li>
                             <img src="./../asset/memberCenter/nav5.png" alt="">
-                            <a href="./tableModel.html?iframeType=4" target="listIframe">我发布的VR模型</a>
+                            <a class="nav-href" href="./tableModel.html?iframeType=4" target="listIframe">我发布的VR模型</a>
                         </li>
                         <li>
                             <img src="./../asset/memberCenter/nav6.png" alt="">
-                            <a href="./tableSoftware.html" target="listIframe">我发布的VR软件</a>
+                            <a class="nav-href" href="./tableSoftware.html" target="listIframe">我发布的VR软件</a>
                         </li>
                         <li>
                             <img src="./../asset/memberCenter/nav7.png" alt="">
-                            <a href="./recharge.html" target="listIframe">充值中心</a>
+                            <a class="nav-href" href="./recharge.html" target="listIframe">充值中心</a>
                         </li>
                         <li style="border: none">
                             <img src="./../asset/memberCenter/nav8.png" alt="">
-                            <a href="./agreementDescription.html" target="listIframe">平台服务协议</a>
+                            <a class="nav-href" href="./agreementDescription.html" target="listIframe">平台服务协议</a>
                         </li>
                     </ul>
                 </div>
