--- a/src/html/vrModel.html
+++ b/src/html/vrModel.html
@@ -42,7 +42,7 @@
                                 <div>
                                     <span>账户余额不足？</span>
                                     <span>$</span>
-                                    <a>维币充值</a>
+                                    <a class="rechage" href="./memberCenter.html?recharge=true" target="_blink">维币充值</a>
                                 </div>
                                 <div>
                                     <span>发布时间：</span>
@@ -64,7 +64,7 @@
                     <div class="text-center">
                         <button class="btn download-btn">
                             <img src="./../asset/vrModel/u492.png" alt="">
-                            <span>下载模型</span>
+                            <span class="download-model">下载模型</span>
                         </button>
                     </div>
                 </div>
