--- a/src/html/vrproduct.html
+++ b/src/html/vrproduct.html
@@ -49,7 +49,7 @@
                     <div class="video-detail">
                         <button class="btn download-btn">
                             <img src="./../asset/vrproduct/u455.png" alt="">
-                            <span>DEMO下载</span>
+                            <span class="download-demo">DEMO下载</span>
                         </button>
                         <div class="contact-way">
                             <p class="text-center">如需购买请直接联系开发者进行交易！</p>
