--- a/src/html/recharge.html
+++ b/src/html/recharge.html
@@ -12,20 +12,20 @@
         <p>
             <span>充值账号：</span>
             <span class="user-name"></span>
-            <span style="display: inline-block; margin-left: 100px;">当前余额：</span>
+            <span style="display: inline-block; margin-left: 100px;" class="money">当前余额：</span>
             <span class="balance"></span>
         </p>
         <input class="personal" id="50" type="radio" name="money" value="50" checked>
-        <label class="personal" for="50">充值50元，获得50维币</label>
+        <label class="personal" for="50">充值50元，获得<span class="50-wb"></span>维币</label>
         <br>
         <input class="group" id="100" type="radio" name="money" value="100">
-        <label class="group" for="100">充值100元，获得100维币</label>
+        <label class="group" for="100">充值100元，获得<span class="100-wb"></span>维币</label>
         <br>
         <input class="group" id="200" type="radio" name="money" value="200">
-        <label class="group" for="200">充值200元，获得200维币</label>
+        <label class="group" for="200">充值200元，获得<span class="200-wb"></span>维币</label>
         <br>
         <input class="group" id="500" type="radio" name="money" value="500">
-        <label class="group" for="500">充值500元，获得500维币</label>
+        <label class="group" for="500">充值500元，获得<span class="500-wb"></span>维币</label>
         <br>
         <input class="group" id="0" type="radio" name="money" value="0">
         <label class="group" for="0">
