--- a/src/html/newPassword.html
+++ b/src/html/newPassword.html
@@ -65,7 +65,7 @@
                 </div>
             </div>
             <div class="step step-3">
-                <p>修改密码成功</p>
+                <p>修改密码成功<a href="./login.html">登录</a></p>
             </div>
         </div>
         <div class="foot text-center">
