--- a/src/html/vrModelpublish.html
+++ b/src/html/vrModelpublish.html
@@ -23,7 +23,7 @@
                         <label>
                             <span>*</span>价格：</label>
                         <input class="price" type="text" placeholder="请输入价格">
-                        <span>维币（注：1维币等于5元人民币）</span>
+                        <span>维币（注：1维币等于<span class="money-wb"></span>元人民币）</span>
                     </div>
                 </div>
                 <div class="row">
