--- a/src/html/vrpublish.html
+++ b/src/html/vrpublish.html
@@ -54,7 +54,7 @@
                 </div>
                 <div class="row">
                     <div class="col-dm-12">
-                        <p style="color: red; margin: 0 0 0 110px;">注：自行控制模型文件的版权，防止被盗用，若出现法律纠纷，自行负责。</p>
+                        <p style="color: red; margin: 0 0 0 110px;">注：自行增加对演示视频、ＤＥＭＯ文件、图片打水印或标识，防止被盗用，若出现法律纠纷，自行负责。</p>
                     </div>
                 </div>
                 <div class="row">
