--- a/src/html/memberCenter.html
+++ b/src/html/memberCenter.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv=”X-UA-Compatible” content=”IE=edge,chrome=1″ />
     <title>会员中心</title>
 </head>
 
