--- a/src/html/vrproduct.html
+++ b/src/html/vrproduct.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv=”X-UA-Compatible” content=”IE=edge,chrome=1″ />
     <title>VR产品</title>
 
     <body oncontextmenu = "return false" >
@@ -12,9 +12,8 @@
                 <p class="title"></p>
                 <div class="detail">
                     <div class="video-box">
-                        <video id="video" width="100%" height="100%" preload="auto" poster="" controls preload x5-playsinline="" playsinline="" controlslist="nodownload"
+                        <video id="video" src="" width="100%" height="100%" preload="auto" poster="" controls preload x5-playsinline="" playsinline="" controlslist="nodownload"
                             webkit-playsinline="true" style="width: 100%; height: 100%; background-color: rgb(0, 0, 0);">
-                            <source src="">
                         </video>
                         <div class="video-number">
                             <ul class="list-unstyled list-inline">
