--- a/src/html/memberCenter.html
+++ b/src/html/memberCenter.html
@@ -1,80 +1,126 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <meta http-equiv=”X-UA-Compatible” content=”IE=edge,chrome=1″ />
     <title>会员中心</title>
-</head>
+  </head>
 
-<body oncontextmenu = "return false" >
+  <body oncontextmenu="return false">
+    <div class="full-member-center">
+      <div class="member-header">
+        <div class="logo">
+          <img src="./../asset/img/logo.png" alt="" width="100%" />
+        </div>
+        <p class="font-30">会员中心</p>
+        <div class="to-index">
+          <span class="user-name font-bold"></span>
+          <br />
+          <img src="./../asset/register/u688.png" alt="" />
+          <a class="font-bold" href="index.html" class="font-bold"
+            >维工坊首页</a
+          >
+        </div>
+      </div>
+    </div>
     <div class="document document-member" style="width: 1350px;">
-        <div class="member-box">
-            <div class="member-header">
-                <div class="logo">
-                    <img src="./../asset/img/logo.png" alt="" width="100%">
-                </div>
-                <p class="font-30">会员中心</p>
-                <div class="to-index">
-                    <span class="user-name font-bold"></span>
-                    <br>
-                    <img src="./../asset/register/u688.png" alt="">
-                    <a class="font-bold" href="index.html" class="font-bold">维工坊首页</a>
-                </div>
-            </div>
-            <div class="content">
-                <div class="nav">
-                    <ul class="list-unstyled nav-a">
-                        <li>
-                            <img src="./../asset/memberCenter/nav1.png" alt="">
-                            <a class="nav-href" href="./memberCenterList.html?iframeType=0" target="listIframe">我的收藏夹</a>
-                        </li>
-                        <li>
-                            <img src="./../asset/memberCenter/nav2.png" alt="">
-                            <a class="nav-href" href="./memberCenterList.html?iframeType=1" target="listIframe">我的浏览足迹</a>
-                        </li>
-                        <li>
-                            <img src="./../asset/memberCenter/nav3.png" alt="">
-                            <a class="nav-href" href="./memberCenterList.html?iframeType=2" target="listIframe">我的点赞</a>
-                        </li>
-                        <li>
-                            <img src="./../asset/memberCenter/nav4.png" alt="">
-                            <a class="nav-href" href="./memberCenterList.html?iframeType=3" target="listIframe">我购买的VR模型</a>
-                        </li>
-                        <li>
-                            <img src="./../asset/memberCenter/nav5.png" alt="">
-                            <a class="nav-href" href="./tableModel.html?iframeType=4" target="listIframe">我发布的VR模型</a>
-                        </li>
-                        <li>
-                            <img src="./../asset/memberCenter/nav6.png" alt="">
-                            <a class="nav-href" href="./tableSoftware.html" target="listIframe">我发布的VR软件</a>
-                        </li>
-                        <li>
-                            <img src="./../asset/memberCenter/nav7.png" alt="">
-                            <a class="nav-href" href="./recharge.html" target="listIframe">充值中心</a>
-                        </li>
-                        <li style="border: none">
-                            <img src="./../asset/memberCenter/nav8.png" alt="">
-                            <a class="nav-href" href="./agreementDescription.html" target="listIframe">平台服务协议</a>
-                        </li>
-                    </ul>
-                </div>
-                <iframe id="listIframe" name="listIframe" src="./memberCenterList.html?iframeType=0" frameborder="0"></iframe>
-            </div>
+      <div class="member-box">
+        <div class="content">
+          <div class="nav">
+            <ul class="list-unstyled nav-a">
+              <li>
+                <img src="./../asset/memberCenter/nav1.png" alt="" />
+                <a
+                  class="nav-href"
+                  href="./memberCenterList.html?iframeType=0"
+                  target="listIframe"
+                  >我的收藏夹</a
+                >
+              </li>
+              <li>
+                <img src="./../asset/memberCenter/nav2.png" alt="" />
+                <a
+                  class="nav-href"
+                  href="./memberCenterList.html?iframeType=1"
+                  target="listIframe"
+                  >我的浏览足迹</a
+                >
+              </li>
+              <li>
+                <img src="./../asset/memberCenter/nav3.png" alt="" />
+                <a
+                  class="nav-href"
+                  href="./memberCenterList.html?iframeType=2"
+                  target="listIframe"
+                  >我的点赞</a
+                >
+              </li>
+              <li>
+                <img src="./../asset/memberCenter/nav4.png" alt="" />
+                <a
+                  class="nav-href"
+                  href="./memberCenterList.html?iframeType=3"
+                  target="listIframe"
+                  >我购买的VR模型</a
+                >
+              </li>
+              <li>
+                <img src="./../asset/memberCenter/nav5.png" alt="" />
+                <a
+                  class="nav-href"
+                  href="./tableModel.html?iframeType=4"
+                  target="listIframe"
+                  >我发布的VR模型</a
+                >
+              </li>
+              <li>
+                <img src="./../asset/memberCenter/nav6.png" alt="" />
+                <a
+                  class="nav-href"
+                  href="./tableSoftware.html"
+                  target="listIframe"
+                  >我发布的VR软件</a
+                >
+              </li>
+              <li>
+                <img src="./../asset/memberCenter/nav7.png" alt="" />
+                <a class="nav-href" href="./recharge.html" target="listIframe"
+                  >充值中心</a
+                >
+              </li>
+              <li style="border: none">
+                <img src="./../asset/memberCenter/nav8.png" alt="" />
+                <a
+                  class="nav-href"
+                  href="./agreementDescription.html"
+                  target="listIframe"
+                  >平台服务协议</a
+                >
+              </li>
+            </ul>
+          </div>
+          <iframe
+            id="listIframe"
+            name="listIframe"
+            src="./memberCenterList.html?iframeType=0"
+            frameborder="0"
+          ></iframe>
         </div>
-        <div class="foot text-center">
-            <p class="text">Copyright © 2009 Axure.org All rights reserved.</p>
-            <p>成都联助科技</p>
-        </div>
+      </div>
+      <div class="foot text-center">
+        <p class="text">Copyright © 2009 Axure.org All rights reserved.</p>
+        <p>成都联助科技</p>
+      </div>
     </div>
     <div class="remodal" data-remodal-id="memberModal">
-        <h3 class="modal-title"></h3>
-        <p>
-            会员中心
-        </p>
-        <br>
-        <button data-remodal-action="confirm" class="remodal-confirm">确认</button>
+      <h3 class="modal-title"></h3>
+      <p>
+        会员中心
+      </p>
+      <br />
+      <button data-remodal-action="confirm" class="remodal-confirm">
+        确认
+      </button>
     </div>
-</body>
-
+  </body>
 </html>
