--- a/src/html/management.html
+++ b/src/html/management.html
@@ -37,8 +37,8 @@
             </div>
         </div>
         <div class="foot text-center">
-            <p class="text">Copyright © 2009 Axure.org All rights reserved.</p>
-            <p>成都联助科技</p>
+            <p class="text">成都联助科技有限责任公司 备案：蜀ICP备16017380号</p>
+            <p>本网站建议使用：360浏览器（极速模式）、Google Chrome谷歌浏览器、IE9以上版本</p>
         </div>
     </div>
     <div class="remodal" data-remodal-id="memberModal">
