增加微信支付

--- a/src/html/recharge.html
+++ b/src/html/recharge.html
@@ -41,8 +41,8 @@
         <label class="group" for="group">
             <img src="./../asset/memberCenter/alipay.png" alt="" width="50%">
         </label>
-        <input class="group" id="group" type="radio" name="payType" value="04">
-        <label class="group" for="group">
+        <input class="group" id="group2" type="radio" name="payType" value="04">
+        <label class="group" for="group2">
             <img src="./../asset/memberCenter/wechatPay.png" alt="" width="50%">
         </label>
         <br>
@@ -51,14 +51,13 @@
     <div class="remodal" data-remodal-id="wechatModal">
         <!-- <button data-remodal-action="close" class="remodal-close"></button> -->
         <h3 class="modal-title">微信扫码支付</h3>
-        <p class="pay-img">
-            <div id="qrcode"></div>
-        </p>
+        <div id="qrcode" style="display: inline-block;margin: 30px 0;"></div>
         <br />
         <button data-remodal-action="confirm" class="remodal-confirm">
           确认
         </button>
       </div>
+      <script type="text/javascript" src="//static.runoob.com/assets/qrcode/qrcode.min.js"></script>
 </body>
 
 </html>
