--- a/src/html/memberCenter.html
+++ b/src/html/memberCenter.html
@@ -20,6 +20,7 @@
           <a class="font-bold" href="index.html" class="font-bold"
             >维工坊首页</a
           >
+          <a class="developer">开发者中心</a>
         </div>
       </div>
     </div>
@@ -107,6 +108,35 @@
           ></iframe>
         </div>
       </div>
+      <div class="nav-contact">
+        <div class="online-box-detail detail1">
+            <p>QQ ：2671569958</p>
+            <p>微信：weigongfang</p>
+        </div>
+        <div class="online-box-detail detail2">
+            <p>手机：13056667048</p>
+        </div>
+        <ul>
+            <li class="first-li">
+                <img src="./../asset/index/u76.png" alt="">
+                <p>在线客服</p>
+            </li>
+            <li class="second-li">
+                <img src="./../asset/index/u82.png" alt="">
+                <p>客服电话</p>
+            </li>
+            <li class="third-li">
+                <a href="./memberCenter.html" style="text-decoration: none;">
+                    <img src="./../asset/index/u78.png" alt="">
+                    <p>会员中心</p>
+                </a>
+            </li>
+            <li class="top-btn">
+                <img src="./../asset/index/u80.png" alt="">
+                <p>回到顶部</p>
+            </li>
+        </ul>
+    </div>
       <div class="foot text-center">
         <p class="text">成都联助科技有限责任公司 备案：蜀ICP备16017380号</p>
         <p>本网站建议使用：360浏览器（极速模式）、Google Chrome谷歌浏览器、IE9以上版本</p>
@@ -122,5 +152,10 @@
         确认
       </button>
     </div>
+    <div class="remodal" data-remodal-id="indexModal">
+      <p class="modal-text"></p>
+      <br>
+      <button data-remodal-action="confirm" class="remodal-confirm">确认</button>
+  </div>
   </body>
 </html>
