--- a/src/html/recharge.html
+++ b/src/html/recharge.html
@@ -50,9 +50,18 @@
     </div>
     <div class="remodal" data-remodal-id="wechatModal">
         <!-- <button data-remodal-action="close" class="remodal-close"></button> -->
-        <h3 class="modal-title">微信扫码支付</h3>
+        <div>
+            <img class="wechat-pay" src="./../asset/img/wechat_pay.png" alt="">
+
+            <p class="je-text">
+                <span>应付金额：￥</span>
+                <span class="je"></span>
+            </p>
+        </div>
         <div id="qrcode" style="display: inline-block;margin: 30px 0;"></div>
         <br />
+        <img class="wechat-desc" src="./../asset/img/wechat_desc.png" alt="">
+        <br>
         <button data-remodal-action="confirm" class="remodal-confirm">
           确认
         </button>
